<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.linderhassinger.proyecto_integrador.DetalleBancoActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                app:title="@string/app_name"
                app:titleTextColor="@color/white"
                app:navigationIcon="@drawable/ic_arrow"
                android:layout_height="wrap_content">

            </android.support.v7.widget.Toolbar>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/border_detalle">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/bg_banco_detalle"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agente_nicky"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="29sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_406_av_san_jose_bellavista"
                android:gravity="center"
                android:layout_margin="6dp"/>
        </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_detalle">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalle"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_margin="6dp"
                android:textColor="@color/colorPrimary"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sistema"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:padding="12dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_disponible"
                    android:gravity="center"
                    android:padding="12dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seguridad"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:padding="12dp"/>
                <RatingBar
                    style="?android:attr/ratingBarStyleSmall"
                    android:theme="@style/RatingBar"
                    android:rating="3.5"
                    android:stepSize="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_detalle">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horario"
                android:gravity="center"
                android:layout_margin="6dp"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lun. a Sab."
                    android:padding="12dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12:00pm - 18:00pm"
                    android:padding="12dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </LinearLayout>


        </LinearLayout>
</LinearLayout>
</ScrollView>